# test-resource-platform

test-resource-platform/backend/: Dockerfile  alembic.ini  pyproject.toml
test-resource-platform/backend/app/: __init__.py  main.py
test-resource-platform/backend/app/assistant/: llm.py  schemas.py  service.py  tools.py
test-resource-platform/backend/app/auth/: authorization.py  dependencies.py  sessions.py
test-resource-platform/backend/app/bootstrap/: admin.py
test-resource-platform/backend/app/connectivity/: schemas.py  service.py  tcp.py
test-resource-platform/backend/app/core/: config.py
test-resource-platform/backend/app/credentials/: crypto.py  models.py  schemas.py  service.py
test-resource-platform/backend/app/db/: health.py  session.py
test-resource-platform/backend/app/identity/: models.py  passwords.py  schemas.py  service.py
test-resource-platform/backend/app/leases/: models.py  schemas.py  service.py
test-resource-platform/backend/app/resources/: models.py  schemas.py  service.py
test-resource-platform/backend/migrations/: env.py
test-resource-platform/backend/migrations/versions/: 20260625_0001_create_users.py  20260626_0002_create_resource_inventory.py  (+9 more)
test-resource-platform/backend/tests/: test_assistant.py  test_auth.py  test_connectivity_checks.py  test_feishu_client.py  test_feishu_integration_setup.py  test_feishu_messages.py  test_feishu_registration.py  test_feishu_worker.py  test_health.py  test_machine_credentials.py  test_resource_inventory.py  test_resource_leases.py  test_user_management.py
(+73 files in other folders)
