[project]
name = "test-resource-platform-api"
version = "0.1.0"
description = "API for the test resource platform."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "cryptography>=42",
    "fastapi>=0.115",
    "lark-oapi>=1.4",
    "psycopg[binary]>=3.2",
    "pydantic>=2.8",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.2",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
